Add accessibility features to images, contrast, heading and title.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-SE6FFM4YDV"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SE6FFM4YDV"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'G-SE6FFM4YDV');
-</script>
+        gtag('config', 'G-SE6FFM4YDV');
+    </script>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -42,15 +42,15 @@
                 <h6 class="connect"><a href="#">LET’S CONNECT</a></h6>
                 <ul>
                     <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img
-                                src="images/Vectortweet.svg" alt="social media image"></a></li>
+                                src="images/Vectortweet.svg" alt="twitter social media icon"></a></li>
                     <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Linkedin.svg"
-                                alt="social media image"></a></li>
+                                alt="linkedin social media icon"></a></li>
                     <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectorm.svg"
-                                alt="social media image"></a></li>
+                                alt="medium website icon"></a></li>
                     <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectorgit.svg"
-                                alt="social media image"></a></li>
+                                alt="github icon"></a></li>
                     <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img
-                                src="images/Vectorpeace.svg" alt="social media image"></a></li>
+                                src="images/Vectorpeace.svg" alt="angellist icon"></a></li>
                 </ul>
             </div>
         </section>
@@ -59,8 +59,8 @@
         <section class="works-wrapper" id="portfolio">
             <ul class="list-wrapper">
                 <li class="project-1">
-                    <img class="projectpic" src="images/project1.svg" alt="project snapshot">
-                    <img class="desktoppic" src="images/dortfoliopic1.svg" alt="project snapshot">
+                    <img class="projectpic" src="images/project1.svg" alt="tonic project snapshot">
+                    <img class="desktoppic" src="images/dortfoliopic1.svg" alt="tonic project snapshot">
                     <div class="info-wrapper">
                         <div class="canopy-flex ">
                             <h2>Tonic</h2>
@@ -84,8 +84,8 @@
                 </li>
                 <!--PROJECT 2-->
                 <li class="project-1 reverse">
-                    <img class="projectpic" src="images/portfolio2.svg" alt="project snapshot">
-                    <img class="desktoppic" src="images/dortfoliopic2.svg" alt="project snapshot">
+                    <img class="projectpic" src="images/portfolio2.svg" alt="multi-post stories project snapshot">
+                    <img class="desktoppic" src="images/dortfoliopic2.svg" alt="multi-post stories project snapshot">
                     <div class="info-wrapper">
                         <div class="canopy-flex">
                             <h2>Multi-Post Stories</h2>
@@ -101,8 +101,8 @@
                         <p class="primary-read desktop">Experimental content creation feature
                             that allows users to<br> add to an existing story over the
                             course of a day without spamming their friends.</p>
-                            <p class="primary-read mobile">A daily selection of privately personalized reads;
-                                no accounts <br> or sign-ups required.</p>
+                        <p class="primary-read mobile">A daily selection of privately personalized reads;
+                            no accounts <br> or sign-ups required.</p>
                         <ul class="small-button-wrapper">
                             <li class="small-button">html</li>
                             <li class="small-button small-button2">Ruby on Rails</li>
@@ -116,8 +116,8 @@
                 </li>
                 <!--PROJECT 3-->
                 <li class="project-1">
-                    <img class="projectpic" src="images/project3.png" alt="project snapshot">
-                    <img class="desktoppic" src="images/dortfolio33.png" alt="project snapshot">
+                    <img class="projectpic" src="images/project3.png" alt="tonic project snapshot">
+                    <img class="desktoppic" src="images/dortfolio33.png" alt="facebook 360 project snapshot">
                     <div class="info-wrapper">
                         <div class="canopy-flex">
                             <h2 class="mobile">Tonic</h2>
@@ -134,9 +134,9 @@
                         <p class="primary-read desktop">Exploring the future of media in Facebook's
                             first Virtual Reality app;
                             a place to discover and enjoy 360 photos and videos on Gear VR.</p>
-                            <p class="primary-read mobile">A daily selection of privately personalized reads;
-                                no accounts <br> or sign-ups required.</p>
-                            <ul class="small-button-wrapper">
+                        <p class="primary-read mobile">A daily selection of privately personalized reads;
+                            no accounts <br> or sign-ups required.</p>
+                        <ul class="small-button-wrapper">
                             <li class="small-button">html</li>
                             <li class="small-button small-button2">Ruby on Rails</li>
                             <li class="small-button">css</li>
@@ -149,8 +149,8 @@
                 </li>
                 <!--PROJECT 4-->
                 <li class="project-1 reverse">
-                    <img class="projectpic" src="images/project4.svg" alt="project snapshot">
-                    <img class="desktoppic" src="images/dortfoliopic3.svg" alt="project snapshot">
+                    <img class="projectpic" src="images/project4.svg" alt="multi-post stories project snapshot">
+                    <img class="desktoppic" src="images/dortfoliopic3.svg" alt="uber navigation project snapshot">
                     <div class="info-wrapper">
                         <div class="canopy-flex">
                             <h2 class="mobile">Multi-Post Stories</h2>
@@ -167,9 +167,9 @@
                         <p class="primary-read desktop">Experimental content creation feature
                             that allows users to<br> add to an existing story over the
                             course of a day without spamming their friends.</p>
-                            <p class="primary-read mobile">A daily selection of privately personalized reads;
-                                no accounts <br> or sign-ups required.</p>
-                            <ul class="small-button-wrapper">
+                        <p class="primary-read mobile">A daily selection of privately personalized reads;
+                            no accounts <br> or sign-ups required.</p>
+                        <ul class="small-button-wrapper">
                             <li class="small-button">html</li>
                             <li class="small-button small-button2">Ruby on Rails</li>
                             <li class="small-button">css</li>
@@ -179,13 +179,13 @@
                             <button class="large-button" type="button">See Project</button>
                         </div>
                     </div>
-                </li>    
+                </li>
             </ul>
         </section>
         <!--PROJECT SECTION ENDS HERE-->
         <section class="about-me" id="about">
             <div class="about-wrapper">
-                <h1>About Myself</h1>
+                <h2>About Myself</h2>
                 <p class="info-section">Hello I’m a software developer!
                     I can help you build a product , feature or website Look through some of my work and experience! If
                     you
@@ -195,15 +195,15 @@
                     <h6 class="connect"><a href="#">LET’S CONNECT</a></h6>
                     <ul>
                         <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img
-                                    src="images/Vectortweet.svg" alt="social media image"></a></li>
+                                    src="images/Vectortweet.svg" alt="twitter social media icon"></a></li>
                         <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img
-                                    src="images/Linkedin.svg" alt="social media image"></a></li>
+                                    src="images/Linkedin.svg" alt="linkedin social media icon"></a></li>
                         <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img
-                                    src="images/Vectorm.svg" alt="social media image"></a></li>
+                                    src="images/Vectorm.svg" alt="medium website icon"></a></li>
                         <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img
-                                    src="images/Vectorgit.svg" alt="social media image"></a></li>
+                                    src="images/Vectorgit.svg" alt="github icon"></a></li>
                         <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img
-                                    src="images/Vectorpeace.svg" alt="social media image"></a></li>
+                                    src="images/Vectorpeace.svg" alt="angellist icon"></a></li>
                     </ul>
                     <div class="resume">
                         <button class="large-button" type="button">Get my resume</button>
@@ -214,18 +214,18 @@
             <section class="qualification">
                 <ul class="cat-wrapper">
                     <li>
-                        <p>Langguages <img src="images/Disabled.svg" alt="arrow"></p>
+                        <p>Languages <img src="images/Disabled.svg" alt="arrow"></p>
 
                         <ul class="lang-container">
-                            <li><img src="images/js.svg" alt="javascript">
+                            <li><img src="images/js.svg" alt="javascript language logo">
                                 <h5 class="title-text">JavaScript</h5>
                             </li>
                             <li>
-                                <img src="images/html.svg" alt="javascript">
+                                <img src="images/html.svg" alt="hyper-text mark up language logo">
                                 <h5 class="title-text">HTML</h5>
                             </li>
                             <li>
-                                <img src="images/css.svg" alt="javascript">
+                                <img src="images/css.svg" alt="cascading style sheet language logo">
                                 <h5 class="title-text">CSS</h5>
                             </li>
                         </ul>
@@ -241,25 +241,25 @@
         </section>
         <section id="contact">
             <form id="contact-me" action="https://formspree.io/f/mnqlvaea" method="post">
-                <h1>Contact me</h1>
+                <h2>Contact me</h2>
                 <p>If you have an application you are interested in developing,
                     a feature that you need built or a project that needs coding.
                     I’d love to help with it </p>
                 <ul>
                     <li>
                         <input type="text" class="input-box" name="user_name" placeholder="Enter your name here"
-                             required maxlength="30">
+                            required maxlength="30">
                     </li>
                     <li>
                         <input type="email" class="input-box" name="user_email" placeholder="Enter your e-mail here"
-                             required>
+                            required>
                     </li>
                     <li>
                         <textarea class="input-box input-box-area" placeholder="Write your message here"
                             name="user_message" required maxlength="500"></textarea>
                     </li>
                     <li id="button-wrapper">
-                        <button class="large-button white-button" type="submit">Get It Touch</button>
+                        <button class="large-button white-button" type="submit">Get In Touch</button>
                     </li>
                 </ul>
             </form>
