Add the CSS class and the HTML test for the pop up menu.

--- a/index.html
+++ b/index.html
@@ -28,9 +28,16 @@
                 <li class="menu-options"><a href="#portfolio">Portfolio</a></li>
                 <li class="menu-options"><a href="#about">About</a></li>
                 <li class="menu-options"><a href="#contact">Contact</a></li>
-                <li><img src="images/Menu.svg" alt="menu image" class="menu-image"></li>
+                <li><img src="images/Menu.svg" alt="menu image" class="menu-image burger"></li>
             </ul>
         </nav>
+        <div id="pop-menu" class="pop-menu">
+            <ul>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
     </header>
     <main class="flex-container">
         <section class="greet-section">
@@ -265,6 +272,7 @@
             </form>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
