Add close and opem menu functions

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                 <li class="menu-options"><a href="#portfolio">Portfolio</a></li>
                 <li class="menu-options"><a href="#about">About</a></li>
                 <li class="menu-options"><a href="#contact">Contact</a></li>
-                <li><img src="images/Menu.svg" alt="menu image" class="menu-image burger"></li>
+                <li id="burger"><img src="images/Menu.svg" alt="menu image" class="menu-image burger"></li>
             </ul>
         </nav>
         <div id="pop-menu" class="pop-menu">
-            <ul>
-                <li><a href="#portfolio">Portfolio</a></li>
+            <ul id="portfolio">
+                <li><a  href="#portfolio">Portfolio</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
