--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </ul>
         </nav>
         <div id="pop-menu" class="pop-menu">
-            <ul id="portfolio">
+            <ul id="menu-list">
                 <li><a  href="#portfolio">Portfolio</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
