fix styling and js and etc

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </script>
 </head>
 
-<body>
+<body class="override-flowbody">
     <header>
         <nav class="navbar">
             <ul>
@@ -44,108 +44,6 @@
         </div>
     </header>
     <main class="flex-container">
-        <!--POPUP WINDOW-->
-        <div class="popup-window">
-            <div class="popup-header">
-                <h2 class="project-name">Trying</h2>
-                <button class="close-btn">&times;</button>
-            </div>
-            <ul class="popup-description">
-                <li class="d-item">CANOPY</li>
-                <li class="d-item d-item1">• Back End Dev •</li>
-                <li class="d-item d-item1">2015</li>
-            </ul>
-            <div>
-                <img class="feature-image mobile" src="images/project1.svg" alt="project image" />
-                <img class="feature-image desktop" src="images/dortfoliopic1.svg" alt="project image" />
-            </div>
-            <div class="mobile">
-                <p class="popup-body">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting
-                    industry. Lorem Ipsum has been the industry's standard dummy text
-                    ever since the 1500s, when an unknown printer took a galley of
-                    type and scrambled it to make a type specimen book. It has
-                    survived not only five centuries, but also the leap into
-                    electronic typesetting, remaining essent
-                </p>
-            </div>
-            <ul class="popup-lang mobile">
-                <li class="lang-item small-button mobile">html</li>
-                <li class="lang-item small-button mobile">css</li>
-                <li class="lang-item small-button mobile">javaScript</li>
-            </ul>
-            <div class="lb mobile">
-                <button class="large-button project-details mobile" type="button">
-                    See Live
-                    <span class="btn-icon">
-                        <img src="images/Icon.svg" alt="github icon">
-                    </span>
-                </button>
-                <button class="large-button project-details mobile" type="button">
-                    See Source
-                    <span class="btn-icon">
-                        <img src="images/Vectorgit.svg" alt="github icon">
-                    </span>
-                </button>
-            </div>
-            <div class="desktop dsk-container">
-                <div class="popup-body-container">
-                    <p class="popup-body">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry. Lorem Ipsum has been the industry's standard dummy text
-                        ever since the 1500s, when an unknown printer took a galley of
-                        type and scrambled it to make a type specimen book. It has
-                        survived not only five centuries, but also the leap into
-                        electronic typesetting, remaining essential. Lorem Ipsum is simply dummy text of the printing
-                        and typesetting
-                        industry. Lorem Ipsum has been the industry's standard dummy text
-                        ever since the 1500s, when an unknown printer took a galley of
-                        type and scrambled it to make a type specimen book. It has
-                        survived not only five centuries, but also the leap into
-                        electronic typesetting, remaining essential. Lorem Ipsum is simply dummy text of the printing
-                        and typesetting
-                        industry. Lorem Ipsum has been the industry's standard dummy text
-                        ever since the 1500s, when an unknown printer took a galley of
-                        type and scrambled it to make a type specimen book. It has
-                        survived not only five centuries, but also the leap into
-                        electronic typesetting, remaining essential. Lorem Ipsum is simply dummy text of the printing
-                        and typesetting
-                        industry. Lorem Ipsum has been the industry's standard dummy text
-                        ever since the 1500s, when an unknown printer took a galley of
-                        type and scrambled it to make a type specimen book. It has
-                        survived not only five centuries, but also the leap into
-                        electronic typesetting, remaining essential.
-                    </p>
-                </div>
-                <div class="second-div">
-                    <ul class="popup-lang">
-                        <li class="lang-item small-button">html</li>
-                        <li class="lang-item small-button">css</li>
-                        <li class="lang-item small-button">javaScript</li>
-                    </ul>
-                    <ul class="popup-lang">
-                        <li class="lang-item small-button">github</li>
-                        <li class="lang-item small-button">Ruby</li>
-                        <li class="lang-item small-button">Bootstrap</li>
-                    </ul>
-                    <div class="lb">
-                        <button class="large-button project-details" type="button">
-                            See Live
-                            <span class="btn-icon">
-                                <img src="images/Icon.svg" alt="github icon">
-                            </span>
-                        </button>
-                        <button class="large-button project-details" type="button">
-                            See Source
-                            <span class="btn-icon">
-                                <img src="images/Vectorgit.svg" alt="github icon">
-                            </span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>        
-        <div class="overlay"></div>
         <section class="greet-section">
             <h1 class="main-header">
                 I’m Rhyine <br />
@@ -339,6 +237,111 @@
             </ul>
         </section>
         <!--PROJECT SECTION ENDS HERE-->
+
+        <!--POPUP WINDOW-->
+        <div class="popup-bg">
+            <div class="popup-window">
+                <div class="popup-header">
+                    <h2 class="project-name">Trying</h2>
+                    <button class="close-btn">&times;</button>
+                </div>
+                <ul class="popup-description">
+                    <li class="d-item">CANOPY</li>
+                    <li class="d-item d-item1">• Back End Dev •</li>
+                    <li class="d-item d-item1">2015</li>
+                </ul>
+                <div>
+                    <img class="feature-image mobile" src="images/project1.svg" alt="project image" />
+                    <img class="feature-image desktop" src="images/dortfoliopic1.svg" alt="project image" />
+                </div>
+                <div class="mobile">
+                    <p class="popup-body">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry. Lorem Ipsum has been the industry's standard dummy text
+                        ever since the 1500s, when an unknown printer took a galley of
+                        type and scrambled it to make a type specimen book. It has
+                        survived not only five centuries, but also the leap into
+                        electronic typesetting, remaining essent
+                    </p>
+                </div>
+                <ul class="popup-lang mobile">
+                    <li class="lang-item small-button mobile">html</li>
+                    <li class="lang-item small-button mobile">css</li>
+                    <li class="lang-item small-button mobile">javaScript</li>
+                </ul>
+                <div class="lb mobile">
+                    <button class="large-button project-details mobile" type="button">
+                        See Live
+                        <span class="btn-icon">
+                            <img src="images/Icon.svg" alt="github icon">
+                        </span>
+                    </button>
+                    <button class="large-button project-details mobile" type="button">
+                        See Source
+                        <span class="btn-icon">
+                            <img src="images/Vectorgit.svg" alt="github icon">
+                        </span>
+                    </button>
+                </div>
+                <div class="desktop dsk-container">
+                    <div class="popup-body-container">
+                        <p class="popup-body">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting
+                            industry. Lorem Ipsum has been the industry's standard dummy text
+                            ever since the 1500s, when an unknown printer took a galley of
+                            type and scrambled it to make a type specimen book. It has
+                            survived not only five centuries, but also the leap into
+                            electronic typesetting, remaining essential. Lorem Ipsum is simply dummy text of the printing
+                            and typesetting
+                            industry. Lorem Ipsum has been the industry's standard dummy text
+                            ever since the 1500s, when an unknown printer took a galley of
+                            type and scrambled it to make a type specimen book. It has
+                            survived not only five centuries, but also the leap into
+                            electronic typesetting, remaining essential. Lorem Ipsum is simply dummy text of the printing
+                            and typesetting
+                            industry. Lorem Ipsum has been the industry's standard dummy text
+                            ever since the 1500s, when an unknown printer took a galley of
+                            type and scrambled it to make a type specimen book. It has
+                            survived not only five centuries, but also the leap into
+                            electronic typesetting, remaining essential. Lorem Ipsum is simply dummy text of the printing
+                            and typesetting
+                            industry. Lorem Ipsum has been the industry's standard dummy text
+                            ever since the 1500s, when an unknown printer took a galley of
+                            type and scrambled it to make a type specimen book. It has
+                            survived not only five centuries, but also the leap into
+                            electronic typesetting, remaining essential.
+                        </p>
+                    </div>
+                    <div class="second-div">
+                        <ul class="popup-lang">
+                            <li class="lang-item small-button">html</li>
+                            <li class="lang-item small-button">css</li>
+                            <li class="lang-item small-button">javaScript</li>
+                        </ul>
+                        <ul class="popup-lang">
+                            <li class="lang-item small-button">github</li>
+                            <li class="lang-item small-button">Ruby</li>
+                            <li class="lang-item small-button">Bootstrap</li>
+                        </ul>
+                        <div class="lb">
+                            <button class="large-button project-details" type="button">
+                                See Live
+                                <span class="btn-icon">
+                                    <img src="images/Icon.svg" alt="github icon">
+                                </span>
+                            </button>
+                            <button class="large-button project-details" type="button">
+                                See Source
+                                <span class="btn-icon">
+                                    <img src="images/Vectorgit.svg" alt="github icon">
+                                </span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <section class="about-me" id="about">
             <div class="about-wrapper">
                 <h2>About Myself</h2>
