--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             />
             <div class="info-wrapper">
               <div class="canopy-flex">
-                <h2>Tonic</h2>
+                <h2 class="project-title">Tonic</h2>
                 <ul>
                   <li class="canopy">CANOPY</li>
                   <li class="back-end">• Back End Dev •</li>
@@ -162,7 +162,7 @@
             />
             <div class="info-wrapper">
               <div class="canopy-flex">
-                <h2>Multi-Post Stories</h2>
+                <h2 class="project-title">Multi-Post Stories</h2>
                 <ul class="desktop">
                   <li class="canopy desktop">FACEBOOK</li>
                   <li class="back-end desktop">• Full Stack Dev •</li>
@@ -213,7 +213,7 @@
             <div class="info-wrapper">
               <div class="canopy-flex">
                 <h2 class="mobile">Tonic</h2>
-                <h2 class="desktop">Facebook 360</h2>
+                <h2 class="desktop project-title">Facebook 360</h2>
                 <ul>
                   <li class="canopy desktop">FACEBOOK</li>
                   <li class="back-end desktop">• Full Stack Dev •</li>
@@ -264,7 +264,7 @@
             <div class="info-wrapper">
               <div class="canopy-flex">
                 <h2 class="mobile">Multi-Post Stories</h2>
-                <h2 class="desktop">Uber Navigation</h2>
+                <h2 class="project-title desktop">Uber Navigation</h2>
                 <ul>
                   <li class="canopy desktop">UBER</li>
                   <li class="back-end desktop">• Lead Developer•</li>
@@ -329,7 +329,7 @@
             />
           </div>
           <div class="mobile">
-            <p class="popup-body">
+            <p id="mobile-pop-text" class="popup-body">
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry. Lorem Ipsum has been the industry's standard dummy text
               ever since the 1500s, when an unknown printer took a galley of
@@ -359,7 +359,7 @@
           </div>
           <div class="desktop dsk-container">
             <div class="popup-body-container">
-              <p class="popup-body">
+              <p id="desk-pop-text" class="popup-body">
                 Lorem Ipsum is simply dummy text of the printing and typesetting
                 industry. Lorem Ipsum has been the industry's standard dummy
                 text ever since the 1500s, when an unknown printer took a galley
@@ -368,21 +368,6 @@
                 electronic typesetting, remaining essential. Lorem Ipsum is
                 simply dummy text of the printing and typesetting industry.
                 Lorem Ipsum has been the industry's standard dummy text ever
-                since the 1500s, when an unknown printer took a galley of type
-                and scrambled it to make a type specimen book. It has survived
-                not only five centuries, but also the leap into electronic
-                typesetting, remaining essential. Lorem Ipsum is simply dummy
-                text of the printing and typesetting industry. Lorem Ipsum has
-                been the industry's standard dummy text ever since the 1500s,
-                when an unknown printer took a galley of type and scrambled it
-                to make a type specimen book. It has survived not only five
-                centuries, but also the leap into electronic typesetting,
-                remaining essential. Lorem Ipsum is simply dummy text of the
-                printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an
-                unknown printer took a galley of type and scrambled it to make a
-                type specimen book. It has survived not only five centuries, but
-                also the leap into electronic typesetting, remaining essential.
               </p>
             </div>
             <div class="second-div">
