Add data to modals from js: technologies, name and description

--- a/index.html
+++ b/index.html
@@ -338,10 +338,10 @@
               electronic typesetting, remaining essent
             </p>
           </div>
-          <ul class="popup-lang mobile">
-            <li class="lang-item small-button mobile">html</li>
+          <ul id="mobile-pop-lang" class="popup-lang mobile">
+            <!-- <li class="lang-item small-button mobile">html</li>
             <li class="lang-item small-button mobile">css</li>
-            <li class="lang-item small-button mobile">javaScript</li>
+            <li class="lang-item small-button mobile">javaScript</li> -->
           </ul>
           <div class="lb mobile">
             <button class="large-button project-details mobile" type="button">
@@ -371,15 +371,13 @@
               </p>
             </div>
             <div class="second-div">
-              <ul class="popup-lang">
-                <li class="lang-item small-button">html</li>
+              <ul id="desk-pop-lang" class="popup-lang">
+                <!-- <li class="lang-item small-button">html</li>
                 <li class="lang-item small-button">css</li>
                 <li class="lang-item small-button">javaScript</li>
-              </ul>
-              <ul class="popup-lang">
                 <li class="lang-item small-button">github</li>
                 <li class="lang-item small-button">Ruby</li>
-                <li class="lang-item small-button">Bootstrap</li>
+                <li class="lang-item small-button">Bootstrap</li> -->
               </ul>
               <div class="lb">
                 <button class="large-button project-details" type="button">
