Edit the HTML and remove the projects section in order to add the dynamic feature.

--- a/index.html
+++ b/index.html
@@ -104,11 +104,10 @@
           </ul>
         </div>
       </section>
-
       <!--PROJECTS SECTION BEGIN HERE -->
-      <section class="works-wrapper" id="portfolio">
+      <!-- <section class="works-wrapper" id="portfolio">
         <ul class="list-wrapper">
-          <li class="project-1">
+         <li class="project-1">
             <img
               class="projectpic"
               src="images/project1.svg"
@@ -148,7 +147,7 @@
               </div>
             </div>
           </li>
-          <!--PROJECT 2-->
+
           <li class="project-1 reverse">
             <img
               class="projectpic"
@@ -198,7 +197,7 @@
               </div>
             </div>
           </li>
-          <!--PROJECT 3-->
+
           <li class="project-1">
             <img
               class="projectpic"
@@ -249,7 +248,7 @@
               </div>
             </div>
           </li>
-          <!--PROJECT 4-->
+
           <li class="project-1 reverse">
             <img
               class="projectpic"
@@ -301,11 +300,12 @@
             </div>
           </li>
         </ul>
-      </section>
+      
+      </section> -->
       <!--PROJECT SECTION ENDS HERE-->
-
+    
       <!--POPUP WINDOW-->
-      <div class="popup-bg">
+      <!-- <div class="popup-bg">
         <div class="popup-window">
           <div class="popup-header">
             <h2 class="project-name">Trying</h2>
@@ -339,9 +339,9 @@
             </p>
           </div>
           <ul id="mobile-pop-lang" class="popup-lang mobile">
-            <!-- <li class="lang-item small-button mobile">html</li>
+            <li class="lang-item small-button mobile">html</li>
             <li class="lang-item small-button mobile">css</li>
-            <li class="lang-item small-button mobile">javaScript</li> -->
+            <li class="lang-item small-button mobile">javaScript</li> 
           </ul>
           <div class="lb mobile">
             <button class="large-button project-details mobile" type="button">
@@ -372,12 +372,12 @@
             </div>
             <div class="second-div">
               <ul id="desk-pop-lang" class="popup-lang">
-                <!-- <li class="lang-item small-button">html</li>
+                <li class="lang-item small-button">html</li>
                 <li class="lang-item small-button">css</li>
                 <li class="lang-item small-button">javaScript</li>
                 <li class="lang-item small-button">github</li>
                 <li class="lang-item small-button">Ruby</li>
-                <li class="lang-item small-button">Bootstrap</li> -->
+                <li class="lang-item small-button">Bootstrap</li> 
               </ul>
               <div class="lb">
                 <button class="large-button project-details" type="button">
@@ -396,7 +396,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <section class="about-me" id="about">
         <div class="about-wrapper">
