Basic structure HTML for projects

--- a/index.html
+++ b/index.html
@@ -104,6 +104,33 @@
           </ul>
         </div>
       </section>
+
+      <section class="projects">
+        <div class="project__card">
+          <img src="#" alt="" class="project__img">
+          <div class="project__info">
+            <h2 class="project__title">Tonic</h2>
+            <ul class="project__quali">
+              <li>Canopy</li>
+              <li><span class="project__circle"></span></li>
+              <li>Back End Dev</li>
+              <li><span class="project__circle"></span></li>
+              <li>2015</li>
+            </ul>
+            <p class="project__desc">
+              A daily selection of privately personalized reads; 
+              no accounts or sign-ups required.
+            </p>
+            <ul class="project__tech">
+              <li class="project__tag">html</li>
+              <li class="project__tag">css</li>
+              <li class="project__tag">javaScript</li>
+            </ul>
+            <button class="project__button">See Project</button>
+          </div>
+        </div>           
+      </section>
+
       <!--PROJECTS SECTION BEGIN HERE -->
       <!-- <section class="works-wrapper" id="portfolio">
         <ul class="list-wrapper">
