Add project section and styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/102965b95f.js"
@@ -105,16 +107,16 @@
         </div>
       </section>
 
-      <section class="projects">
+      <section class="project">
         <div class="project__card">
-          <img src="#" alt="" class="project__img">
+          <img src="./images/dortfoliopic1.svg" alt="" class="project__img">
           <div class="project__info">
             <h2 class="project__title">Tonic</h2>
             <ul class="project__quali">
               <li>Canopy</li>
-              <li><span class="project__circle"></span></li>
+              <li class="project__circle"></li>
               <li>Back End Dev</li>
-              <li><span class="project__circle"></span></li>
+              <li class="project__circle"></li>
               <li>2015</li>
             </ul>
             <p class="project__desc">
