--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/102965b95f.js"
@@ -30,7 +32,7 @@
     </script>
   </head>
 
-  <body class="">
+  <body class="overflow-hidden">
     <header>
       <nav class="navbar">
         <ul>
@@ -104,6 +106,69 @@
           </ul>
         </div>
       </section>
+
+      <!-- PROJECT  -->
+
+      <section class="project">
+        <div class="project__card">
+          <img src="./images/dortfoliopic1.svg" alt="" class="project__img">
+          <div class="project__info">
+            <h2 class="project__title">Tonic</h2>
+            <ul class="project__quali">
+              <li>Canopy</li>
+              <li class="project__circle"></li>
+              <li>Back End Dev</li>
+              <li class="project__circle"></li>
+              <li>2015</li>
+            </ul>
+            <p class="project__desc">
+              A daily selection of privately personalized reads; 
+              no accounts or sign-ups required.
+            </p>
+            <ul class="project__tech">
+              <li class="project__tag">html</li>
+              <li class="project__tag">css</li>
+              <li class="project__tag">javaScript</li>
+            </ul>
+            <button class="project__button">See Project</button>
+          </div>
+        </div>           
+      </section>
+
+      <!-- MODAL -->
+
+      <section id="modal" class="modal modal--active">
+        <div class="modal__window">
+          <div class="modal__header">
+            <h2 class="modal__title">Tonic</h2>
+            <button type="button" class="modal__icon-close">&times;</button>
+          </div>
+          <ul class="modal__list">
+            <li><h3 class="modal__company">Canopy</h3></li>
+            <li class="project__circle"></li>
+            <li><h4 class="modal__role">Front End</h4></li>
+            <li class="project__circle"></li>
+            <li><h4 class="modal__year">2010</h4></li>
+          </ul>
+          <img class="modal__img" src="./images/dortfoliopic1.svg" alt="Work preview for project Uber Navigation">
+          <div class="modal__info">
+            <p class="modal__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam architecto sint, quae sit nostrum accusamus magnam blanditiis iusto in ducimus eligendi voluptatibus commodi.</p>
+            <div class="modal__tags-buttons-container">
+              <ul class="modal__tech">
+                <li class="modal__tag">html</li>
+                <li class="modal__tag">css</li>
+                <li class="modal__tag">js</li>
+              </ul>
+              <div class="modal__line"></div>
+              <div class="modal__buttons-container">
+                <a href="#" class="modal__button modal__button--see-live" target="_blank">See live<i class="modal__icon-button fas fa-external-link-alt"></i></a>
+                <a href="#" class="modal__button modal__button--see-src" target="_blank">See source<i class="modal__icon-button fab fa-github"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!--PROJECTS SECTION BEGIN HERE -->
       <!-- <section class="works-wrapper" id="portfolio">
         <ul class="list-wrapper">
@@ -147,7 +212,6 @@
               </div>
             </div>
           </li>
-
           <li class="project-1 reverse">
             <img
               class="projectpic"
@@ -197,7 +261,6 @@
               </div>
             </div>
           </li>
-
           <li class="project-1">
             <img
               class="projectpic"
@@ -248,7 +311,6 @@
               </div>
             </div>
           </li>
-
           <li class="project-1 reverse">
             <img
               class="projectpic"
@@ -532,5 +594,7 @@
       </section>
     </main>
     <script src="js/script.js"></script>
+    <script src="js/projects.js"></script>
+
   </body>
 </html>
