Add javascript for the validation of form.

--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
           to help with it
         </p>
         <ul>
-          <li>
-            <input type="text" class="input-box" name="user_name" placeholder="Enter your name here" required
+          <li id="email-area">
+            <input type="text" class="input-box email-box" name="user_name" placeholder="Enter your name here" required
               maxlength="30" />
           </li>
           <li>
@@ -255,7 +255,7 @@
               required maxlength="500"></textarea>
           </li>
           <li id="button-wrapper">
-            <button class="large-button white-button" type="submit">
+            <button class="large-button white-button intouch" type="submit">
               Get In Touch
             </button>
           </li>
